use bundled jvm to start cerebro if available